# uridx

./: CLAUDE.md  README.md  pyproject.toml
.github/workflows/: pypi-publish.yml  release.yml
src/uridx/: __init__.py  config.py  record.py
src/uridx/cli/: extract.py  main.py
src/uridx/cli/extract/: __init__.py  _mail.py  base.py  claude_code.py  docling.py  image.py  maildir.py  markdown.py  mbox.py  pdf.py  registry.py  tsugite.py
src/uridx/db/: engine.py  models.py  operations.py
src/uridx/embeddings/: __init__.py  fastembed.py  ollama.py
src/uridx/mcp/: server.py
src/uridx/search/: __init__.py  hybrid.py  query.py
