[project]
name = "uridx"
version = "0.1.0"
description = "uridx - Personal Reference Index"
authors = [
    { name = "copilot-swe-agent[bot]", email = "198982749+Copilot@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
uridx = "uridx:main"

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"
