[project]
name = "uridx"
version = "0.1.0"
description = "uridx - Personal Reference Index"
authors = [
    { name = "Justyn Shull" }
]
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0,<3",
    "sqlmodel>=0.0.16",
    "httpx>=0.27",
    "typer>=0.12",
    "sqlite-vec>=0.1.6",
]

[project.scripts]
uridx = "uridx.cli.main:app"

[project.optional-dependencies]
dev = ["ruff"]

[tool.ruff]
line-length = 120

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]
